--- a/launcher.html
+++ b/launcher.html
@@ -9,7 +9,7 @@
   <h1>🎮 Arcade-4 Remake</h1>
   <p>Select a game to play:</p>
   <ul>
-    <li><a href="games/snake.html">Snake</a></li>
+    <li><a href="https://github.com/DaBoiKreexz/Arcade-4-Remake/tree/main/games/snake.html">Snake</a></li>
     <li><a href="games/pong.html">Pong</a></li>
     <li><a href="games/breakout.html">Breakout</a></li>
   </ul>
