--- a/launcher.html
+++ b/launcher.html
@@ -10,8 +10,8 @@
   <p>Select a game to play:</p>
   <ul>
     <li><a href="https://github.com/DaBoiKreexz/Arcade-4-Remake/tree/main/games/snake.html">Snake</a></li>
-    <li><a href="games/pong.html">Pong</a></li>
-    <li><a href="games/breakout.html">Breakout</a></li>
+    <li><a href="https://github.com/DaBoiKreexz/Arcade-4-Remake/tree/main/games/pong.html">Pong</a></li>
+    <li><a href="https://github.com/DaBoiKreexz/Arcade-4-Remake/tree/main/games/breakout.html">Breakout</a></li>
   </ul>
 </body>
 </html>
