--- a/launcher.html
+++ b/launcher.html
@@ -4,43 +4,84 @@
   <meta charset="UTF-8">
   <title>Arcade-4 Remake</title>
   <style>
-    body {
-      background: #111;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
-    h1 {
-      color: #ffcc00;
-    }
-    button {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #gameFrame {
-      display: none;
-      width: 800px;
-      height: 600px;
-      border: 2px solid #fff;
-      margin: 20px auto;
-    }
+    body { margin:0; font-family:Arial,sans-serif; background:#111; color:#eee; }
+    nav { background:#222; display:flex; justify-content:center; padding:10px; }
+    nav button { background:none; border:none; color:#eee; font-size:18px; margin:0 20px; cursor:pointer; }
+    nav button:hover { color:#ffcc00; }
+    section { display:none; padding:20px; text-align:center; }
+    section.active { display:block; }
+    .rainbow { font-size:48px; font-weight:bold;
+      background:linear-gradient(to right,red,orange,yellow,green,blue,indigo,violet);
+      -webkit-background-clip:text; -webkit-text-fill-color:transparent;
+      animation:rainbowMove 5s linear infinite; }
+    @keyframes rainbowMove { from{background-position:0;} to{background-position:200%;} }
+    .game-card { margin:20px auto; }
+    .game-card button { padding:10px 20px; background:#ffcc00; border:none; border-radius:5px; cursor:pointer; font-weight:bold; }
+    .game-card button:hover { background:#fff; color:#000; }
+    .settings-control { margin:10px; }
+    .gameview { width:100%; height:90vh; background:#000; }
+    .back-btn { margin:10px; padding:8px 16px; background:#ffcc00; border:none; border-radius:5px; cursor:pointer; }
   </style>
 </head>
 <body>
-  <h1>🎮 Arcade-4 Remake</h1>
-  <p>Select a game to play:</p>
-  <button onclick="loadGame('games/FNAF1/index.html')">Play FNAF1</button>
+  <!-- Navigation -->
+  <nav id="mainNav">
+    <button onclick="showSection('home')">Home</button>
+    <button onclick="showSection('games')">Games</button>
+    <button onclick="showSection('settings')">Settings</button>
+  </nav>
 
-  <!-- iframe where the game loads -->
-  <iframe id="gameFrame"></iframe>
+  <!-- Home -->
+  <section id="home" class="active">
+    <h1 class="rainbow">Arcade 4 Remake</h1>
+    <p>Welcome to your arcade hub!</p>
+  </section>
 
+  <!-- Games -->
+  <section id="games">
+    <div class="game-card">
+      <button onclick="playGame('fnaf')">Play FNAF 1</button>
+    </div>
+    <div class="game-card">
+      <button onclick="playGame('snowrider')">Play Snow Rider 3D</button>
+    </div>
+  </section>
+
+  <!-- Settings -->
+  <section id="settings">
+    <h2>Settings</h2>
+    <div class="settings-control">
+      <label>Background Color: <input type="color" onchange="document.body.style.background=this.value" value="#111"></label>
+    </div>
+    <div class="settings-control">
+      <label>Text Color: <input type="color" onchange="document.body.style.color=this.value" value="#eeeeee"></label>
+    </div>
+  </section>
+
+  <!-- Game Views -->
+  <section id="fnaf" class="gameview">
+    <button class="back-btn" onclick="showSection('games')">⬅ Back to Arcade</button>
+    <h2 style="color:white;">FNAF1 Game Area</h2>
+    <!-- Paste FNAF1 code here -->
+  </section>
+
+  <section id="snowrider" class="gameview">
+    <button class="back-btn" onclick="showSection('games')">⬅ Back to Arcade</button>
+    <div id="gameContainer" style="width:800px;height:600px;margin:auto;"></div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/gh/era6yera6y/00@main/TemplateData/UnityProgress.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/era6yera6y/00@main/Build/UnityLoader.js"></script>
   <script>
-    function loadGame(path) {
-      const frame = document.getElementById("gameFrame");
-      frame.src = path;
-      frame.style.display = "block";
+    function showSection(id){
+      document.querySelectorAll('section').forEach(sec=>sec.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
+    function playGame(id){
+      showSection(id);
+      if(id==='snowrider'){
+        UnityLoader.instantiate("gameContainer","https://cdn.jsdelivr.net/gh/era6yera6y/00@main/Build/SnowRider3D-gd-1.json",{onProgress:UnityProgress});
+      }
     }
   </script>
 </body>
