--- a/launcher.html
+++ b/launcher.html
@@ -20,10 +20,10 @@
     .game-card button:hover { background:#fff; color:#000; }
     .settings-control { margin:10px; }
     .gameview { background:#000; }
-    .back-btn { margin:10px; padding:8px 16px; background:#ffcc00; border:none; border-radius:5px; cursor:pointer; }
+    .back-btn, #muteBtn { margin:10px; padding:8px 16px; background:#ffcc00; border:none; border-radius:5px; cursor:pointer; }
     #gameFrame { width:640px; height:480px; border:2px solid #fff; margin:20px auto; display:block; }
-    #gameContainer { width:640px; height:480px; margin:auto; }
-    #muteBtn { margin:10px; padding:8px 16px; background:#ffcc00; border:none; border-radius:5px; cursor:pointer; }
+    .gameWrapper { display:flex; justify-content:center; align-items:center; }
+    #gameContainer { width:640px; height:480px; }
   </style>
 </head>
 <body>
@@ -69,8 +69,10 @@
 
   <section id="snowrider" class="gameview">
     <button class="back-btn" onclick="stopGame('snowrider')">⬅ Back to Arcade</button>
-    <button id="muteBtn" onclick="toggleSound()">Unmute</button>
-    <div id="gameContainer"></div>
+    <button id="muteBtn" onclick="toggleSound()">Mute</button>
+    <div class="gameWrapper">
+      <div id="gameContainer"></div>
+    </div>
   </section>
 
   <!-- Unity Loader -->
@@ -78,7 +80,7 @@
   <script src="https://cdn.jsdelivr.net/gh/era6yera6y/00@main/Build/UnityLoader.js"></script>
   <script>
     let gameInstance = null;
-    let isMuted = true;
+    let isMuted = false;
 
     function navigate(id){
       stopGame('fnaf');
@@ -90,8 +92,7 @@
     function playGame(id){
       navigate(id);
       if(id==='fnaf'){
-        const frame = document.getElementById("gameFrame");
-        frame.src = "games/FNAF1/index.html";
+        document.getElementById("gameFrame").src = "games/FNAF1/index.html";
       }
       if(id==='snowrider'){
         gameInstance = UnityLoader.instantiate("gameContainer",
@@ -101,7 +102,6 @@
             Module: {
               onRuntimeInitialized: function () {
                 UnityProgress(gameInstance, "complete");
-                // Force resolution
                 const canvas = document.querySelector("#gameContainer canvas");
                 if(canvas){
                   canvas.width = 640;
@@ -109,12 +109,8 @@
                   canvas.style.width = "640px";
                   canvas.style.height = "480px";
                 }
-                // Start muted
-                if(gameInstance.Module.audioContext){
-                  //gameInstance.Module.audioContext.suspend();
-                  isMuted = false;
-                  document.getElementById("muteBtn").innerText = "Mute";
-                }
+                isMuted = false;
+                document.getElementById("muteBtn").innerText = "Mute";
               }
             }
           }
@@ -124,24 +120,20 @@
 
     function stopGame(id){
       if(id==='fnaf'){
-        const frame = document.getElementById("gameFrame");
-        frame.src = "about:blank";
+        document.getElementById("gameFrame").src = "about:blank";
       }
       if(id==='snowrider' && gameInstance){
         try { gameInstance.Quit(); } catch(e){}
         gameInstance = null;
-        // Remove the old container completely
-        const container = document.getElementById("gameContainer");
-        if(container){
-          container.remove();
-        }
-        // Recreate a fresh container for next launch
+        // Remove and rebuild container to fully kill WebGL context
+        const wrapper = document.querySelector("#snowrider .gameWrapper");
+        const oldContainer = document.getElementById("gameContainer");
+        if(oldContainer){ oldContainer.remove(); }
         const newDiv = document.createElement("div");
         newDiv.id = "gameContainer";
         newDiv.style.width = "640px";
         newDiv.style.height = "480px";
-        newDiv.style.margin = "auto";
-        document.getElementById("snowrider").appendChild(newDiv);
+        wrapper.appendChild(newDiv);
       }
       document.querySelectorAll('section').forEach(sec=>sec.classList.remove('active'));
       document.getElementById('games').classList.add('active');
